modify tomcat memory settings.